@@ -44,7 +44,12 @@ version 2.68
 	    isn't possible for IPv4 and can generate scary warnings,
 	    but as it's always possible for IPv6 (the API always
 	    exists) then we should do it always. 
- 
+	    
+	    Tweak the rules on prefix-lengths in --dhcp-range for
+	    IPv6. The new rule is that the specified prefix length
+	    must be larger than or equal to the prefix length of the
+	    corresponding address on the local interface. 
+
 
 version 2.67
 	    Fix crash if upstream server returns SERVFAIL when
